# MDDMS

./: CMakeLists.txt  README.md  main.cpp
src/backend/database/config/: database_config.cpp  database_config.hpp
src/backend/database/postgres/: postgres_database.cpp  postgres_database.hpp
src/backend/table/base/: base_table_entity.cpp  base_table_entity.hpp
src/backend/table/batches/: batches_table.cpp  batches_table.hpp
src/backend/table/diseases/: diseases_table.cpp  diseases_table.hpp
src/backend/table/diseasesdrugs/: diseases_drugs_table.cpp  diseases_drugs_table.hpp
src/backend/table/drugs/: drugs_table.cpp  drugs_table.hpp
src/backend/table/shippeddrugs/: shipped_drugs_requests_table.cpp  shipped_drugs_requests_table.hpp
src/backend/table/suppliers/: suppliers_table.cpp  suppliers_table.hpp
src/frontend/application/: application.cpp  application.hpp
src/frontend/tab/base/: base_tab_entity.cpp  base_tab_entity.hpp
src/frontend/tab/batches/: batches_tab.cpp  batches_tab.hpp
src/frontend/tab/diseases/: diseases_tab.cpp  diseases_tab.hpp
src/frontend/tab/diseasesdrugs/: diseases_drugs_tab.cpp  diseases_drugs_tab.hpp
src/frontend/tab/drugs/: drugs_tab.cpp  drugs_tab.hpp
src/frontend/tab/shippeddrugs/: shipped_drugs_tab.cpp  shipped_drugs_tab.hpp
src/frontend/tab/shippeddrugsreport/: shipped_drugs_report_tab.cpp  shipped_drugs_report_tab.hpp
src/frontend/tab/suppliers/: suppliers_tab.cpp  suppliers_tab.hpp
